crates/ruff_linter/src/rules/pylint/snapshots/ruff_linter__rules__pylint__tests__invalid-all-format_invalid_all_format.py.snap
---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
PLE0605 Invalid format for `__all__`, must be `tuple` or `list`
 --> invalid_all_format.py:1:1
  |
1 | __all__ = "CONST"  # [invalid-all-format]
  | ^^^^^^^
2 |
3 | __all__ = ["Hello"] + {"world"}  # [invalid-all-format]
  |

PLE0605 Invalid format for `__all__`, must be `tuple` or `list`
 --> invalid_all_format.py:3:1
  |
1 | __all__ = "CONST"  # [invalid-all-format]
2 |
3 | __all__ = ["Hello"] + {"world"}  # [invalid-all-format]
  | ^^^^^^^
4 |
5 | __all__ += {"world"}  # [invalid-all-format]
  |

PLE0605 Invalid format for `__all__`, must be `tuple` or `list`
 --> invalid_all_format.py:5:1
  |
3 | __all__ = ["Hello"] + {"world"}  # [invalid-all-format]
4 |
5 | __all__ += {"world"}  # [invalid-all-format]
  | ^^^^^^^
6 |
7 | __all__ = {"world"} + ["Hello"]  # [invalid-all-format]
  |

PLE0605 Invalid format for `__all__`, must be `tuple` or `list`
 --> invalid_all_format.py:7:1
  |
5 | __all__ += {"world"}  # [invalid-all-format]
6 |
7 | __all__ = {"world"} + ["Hello"]  # [invalid-all-format]
  | ^^^^^^^
8 |
9 | __all__ = {"world"} + list(["Hello"])  # [invalid-all-format]
  |

PLE0605 Invalid format for `__all__`, must be `tuple` or `list`
  --> invalid_all_format.py:9:1
   |
 7 | __all__ = {"world"} + ["Hello"]  # [invalid-all-format]
 8 |
 9 | __all__ = {"world"} + list(["Hello"])  # [invalid-all-format]
   | ^^^^^^^
10 |
11 | __all__ = list(["Hello"]) + {"world"}  # [invalid-all-format]
   |

PLE0605 Invalid format for `__all__`, must be `tuple` or `list`
  --> invalid_all_format.py:11:1
   |
 9 | __all__ = {"world"} + list(["Hello"])  # [invalid-all-format]
10 |
11 | __all__ = list(["Hello"]) + {"world"}  # [invalid-all-format]
   | ^^^^^^^
12 |
13 | __all__ = (x for x in ["Hello", "world"])  # [invalid-all-format]
   |

PLE0605 Invalid format for `__all__`, must be `tuple` or `list`
  --> invalid_all_format.py:13:1
   |
11 | __all__ = list(["Hello"]) + {"world"}  # [invalid-all-format]
12 |
13 | __all__ = (x for x in ["Hello", "world"])  # [invalid-all-format]
   | ^^^^^^^
14 |
15 | __all__ = {x for x in ["Hello", "world"]}  # [invalid-all-format]
   |

PLE0605 Invalid format for `__all__`, must be `tuple` or `list`
  --> invalid_all_format.py:15:1
   |
13 | __all__ = (x for x in ["Hello", "world"])  # [invalid-all-format]
14 |
15 | __all__ = {x for x in ["Hello", "world"]}  # [invalid-all-format]
   | ^^^^^^^
16 |
17 | __all__ = foo  # [invalid-all-format]
   |

PLE0605 Invalid format for `__all__`, must be `tuple` or `list`
  --> invalid_all_format.py:17:1
   |
15 | __all__ = {x for x in ["Hello", "world"]}  # [invalid-all-format]
16 |
17 | __all__ = foo  # [invalid-all-format]
   | ^^^^^^^
18 |
19 | __all__ = foo.bar  # [invalid-all-format]
   |

PLE0605 Invalid format for `__all__`, must be `tuple` or `list`
  --> invalid_all_format.py:19:1
   |
17 | __all__ = foo  # [invalid-all-format]
18 |
19 | __all__ = foo.bar  # [invalid-all-format]
   | ^^^^^^^
20 |
21 | __all__ = foo["bar"]  # [invalid-all-format]
   |

PLE0605 Invalid format for `__all__`, must be `tuple` or `list`
  --> invalid_all_format.py:21:1
   |
19 | __all__ = foo.bar  # [invalid-all-format]
20 |
21 | __all__ = foo["bar"]  # [invalid-all-format]
   | ^^^^^^^
22 |
23 | __all__ = (foo := bar)  # [invalid-all-format]
   |

PLE0605 Invalid format for `__all__`, must be `tuple` or `list`
  --> invalid_all_format.py:23:1
   |
21 | __all__ = foo["bar"]  # [invalid-all-format]
22 |
23 | __all__ = (foo := bar)  # [invalid-all-format]
   | ^^^^^^^
24 |
25 | __all__ = ["Hello"]
   |

PLE0605 Invalid format for `__all__`, must be `tuple` or `list`
  --> invalid_all_format.py:23:12
   |
21 | __all__ = foo["bar"]  # [invalid-all-format]
22 |
23 | __all__ = (foo := bar)  # [invalid-all-format]
   |            ^^^
24 |
25 | __all__ = ["Hello"]
   |
