crates/ruff_linter/src/rules/pylint/snapshots/ruff_linter__rules__pylint__tests__invalid-all-object_invalid_all_object.py.snap
---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
PLE0604 Invalid object in `__all__`, must contain only strings
 --> invalid_all_object.py:1:1
  |
1 | __all__ = (
  | ^^^^^^^
2 |     None,  # [invalid-all-object]
3 |     Fruit,
  |

PLE0604 Invalid object in `__all__`, must contain only strings
 --> invalid_all_object.py:7:1
  |
5 | )
6 |
7 | __all__ = list([None, "Fruit", "Worm"])  # [invalid-all-object]
  | ^^^^^^^
