crates/ruff_linter/src/rules/pylint/snapshots/ruff_linter__rules__pylint__tests__invalid-bool-return-type_invalid_return_type_bool.py.snap
---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
PLE0304 `__bool__` does not return `bool`
 --> invalid_return_type_bool.py:5:16
  |
3 | class Float:
4 |     def __bool__(self):
5 |         return 3.05  # [invalid-bool-return]
  |                ^^^^
6 |
7 | class Int:
  |

PLE0304 `__bool__` does not return `bool`
 --> invalid_return_type_bool.py:9:16
  |
7 | class Int:
8 |     def __bool__(self):
9 |         return 0  # [invalid-bool-return]
  |                ^
