crates/ruff_linter/src/rules/pylint/snapshots/ruff_linter__rules__pylint__tests__invalid-character-backspace_invalid_characters_syntax_error.py.snap
---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
PLE2510 Invalid unescaped character backspace, use "\b" instead
 --> invalid_characters_syntax_error.py:5:6
  |
4 | # Before any syntax error
5 | b = '␈'
  |      ^
6 | # Unterminated string
7 | b = '␈
  |
help: Replace with escape sequence

invalid-syntax: missing closing quote in string literal
 --> invalid_characters_syntax_error.py:7:5
  |
5 | b = '␈'
6 | # Unterminated string
7 | b = '␈
  |     ^^
8 | b = '␈'
9 | # Unterminated f-string
  |

PLE2510 Invalid unescaped character backspace, use "\b" instead
 --> invalid_characters_syntax_error.py:7:6
  |
5 | b = '␈'
6 | # Unterminated string
7 | b = '␈
  |      ^
8 | b = '␈'
9 | # Unterminated f-string
  |
help: Replace with escape sequence

PLE2510 Invalid unescaped character backspace, use "\b" instead
  --> invalid_characters_syntax_error.py:8:6
   |
 6 | # Unterminated string
 7 | b = '␈
 8 | b = '␈'
   |      ^
 9 | # Unterminated f-string
10 | b = f'␈
   |
help: Replace with escape sequence

PLE2510 Invalid unescaped character backspace, use "\b" instead
  --> invalid_characters_syntax_error.py:10:7
   |
 8 | b = '␈'
 9 | # Unterminated f-string
10 | b = f'␈
   |       ^
11 | b = f'␈'
12 | # Implicitly concatenated
   |
help: Replace with escape sequence

invalid-syntax: f-string: unterminated string
  --> invalid_characters_syntax_error.py:10:7
   |
 8 | b = '␈'
 9 | # Unterminated f-string
10 | b = f'␈
   |       ^
11 | b = f'␈'
12 | # Implicitly concatenated
   |

invalid-syntax: Expected FStringEnd, found newline
  --> invalid_characters_syntax_error.py:10:8
   |
 8 | b = '␈'
 9 | # Unterminated f-string
10 | b = f'␈
   |        ^
11 | b = f'␈'
12 | # Implicitly concatenated
   |

PLE2510 Invalid unescaped character backspace, use "\b" instead
  --> invalid_characters_syntax_error.py:11:7
   |
 9 | # Unterminated f-string
10 | b = f'␈
11 | b = f'␈'
   |       ^
12 | # Implicitly concatenated
13 | b = '␈' f'␈' '␈
   |
help: Replace with escape sequence

PLE2510 Invalid unescaped character backspace, use "\b" instead
  --> invalid_characters_syntax_error.py:13:6
   |
11 | b = f'␈'
12 | # Implicitly concatenated
13 | b = '␈' f'␈' '␈
   |      ^
   |
help: Replace with escape sequence

PLE2510 Invalid unescaped character backspace, use "\b" instead
  --> invalid_characters_syntax_error.py:13:11
   |
11 | b = f'␈'
12 | # Implicitly concatenated
13 | b = '␈' f'␈' '␈
   |           ^
   |
help: Replace with escape sequence

invalid-syntax: missing closing quote in string literal
  --> invalid_characters_syntax_error.py:13:14
   |
11 | b = f'␈'
12 | # Implicitly concatenated
13 | b = '␈' f'␈' '␈
   |              ^^

PLE2510 Invalid unescaped character backspace, use "\b" instead
  --> invalid_characters_syntax_error.py:13:15
   |
11 | b = f'␈'
12 | # Implicitly concatenated
13 | b = '␈' f'␈' '␈
   |               ^
   |
help: Replace with escape sequence
